# soroban-hello-world

./: Cargo.toml  commands.txt
.github/workflows/: release.yml
contracts/MyFirstToken/: Cargo.toml
contracts/MyFirstToken/src/: lib.rs  test.rs
contracts/My_TOKEN/src/: lib.rs
