[package]
name = "game_reward_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

# Purani dependencies (stellar-tokens wagera) nikal dein kyunke supervisor ke code mein wo use nahi ho rahin.

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true